--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,8 +13,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Build
-      run: docker build -t ghcr.io/meerugin/hhh:1.0 .
+    - name: Build1 
+      run: docker build -t ghcr.io/meerugin/hhh/main:1.0 .
+
+    - name: Build2 
+      run: docker build -t ghcr.io/meerugin/hhh/index:1.0 .
 
     - name: Login to ghcr.io
       uses: docker/login-action@v1
@@ -23,5 +26,8 @@ jobs:
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
 
-    - name: Push
-      run: docker push ghcr.io/meerugin/hhh:1.0
+    - name: Push1
+      run: docker push ghcr.io/meerugin/hhh/main:1.0
+
+    - name: Push2
+      run: docker push ghcr.io/meerugin/hhh/index:1.0
