--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,8 +20,12 @@ jobs:
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
 
-    - name: Build and push images
-      uses: docker/build-push-action@v2
-      with:
-       context: .
-       push: true
+    - name: build
+      run: 
+       docker build -t ghcr.io/meerugin/hhh/main:1.0 .github/python/
+       docker build -t ghcr.io/meerugin/hhh/index:1.0 .github/node/
+
+    - name: Push
+      run:
+       docker push ghcr.io/meerugin/hhh/main:1.0 .github/python/
+       docker push ghcr.io/meerugin/hhh/index:1.0 .github/node/
