--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,6 +23,9 @@ jobs:
     - name: build
       run: 
        docker build -t ghcr.io/meerugin/hhh/main:1.0 .github/python/
+
+    - name: build2
+      run: 
        docker build -t ghcr.io/meerugin/hhh/index:1.0 .github/node/
 
     - name: Push
