--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -22,13 +22,10 @@ jobs:
 
     - name: build
       run: 
-       docker build -t ghcr.io/meerugin/hhh/main:1.0 .github/python/
-
-    - name: build2
-      run: 
-       docker build -t ghcr.io/meerugin/hhh/index:1.0 .github/node/
+       docker build -t ghcr.io/meerugin/hhh/main:1.0 .
+       docker build -t ghcr.io/meerugin/hhh/index:1.0 .
 
     - name: Push
       run:
-       docker push ghcr.io/meerugin/hhh/main:1.0 .github/python/
-       docker push ghcr.io/meerugin/hhh/index:1.0 .github/node/
+       docker push ghcr.io/meerugin/hhh/main:1.0
+       docker push ghcr.io/meerugin/hhh/index:1.0
