--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -21,4 +21,4 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}
 
     - name: Start Docker Compose
-      run: docker-compose up -d
+      run: docker-compose.yml up -d
