--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,12 +20,9 @@ jobs:
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
 
-    - name: build
+    - name: build and push
       run: 
-       docker build -t ghcr.io/meerugin/hhh/main:1.0 meerugin/hhh/python
-       docker build -t ghcr.io/meerugin/hhh/index:1.0 meerugin/hhh/node
-
-    - name: Push
-      run:
+       docker build -t ghcr.io/meerugin/hhh/main:1.0 ./python
        docker push ghcr.io/meerugin/hhh/main:1.0
+       docker build -t ghcr.io/meerugin/hhh/index:1.0 ./node
        docker push ghcr.io/meerugin/hhh/index:1.0
